<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userdetail.UserDetailActivity">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <FrameLayout
        android:id="@+id/picture_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_500">
        <ImageView
            android:id="@+id/user_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/picture_content_description" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInput"
        app:layout_constraintTop_toBottomOf="@id/picture_layout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            style="@style/TextEdit"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInput"
        app:layout_constraintTop_toBottomOf="@id/user_first_name_layout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            style="@style/TextEdit"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInput"
        app:layout_constraintTop_toBottomOf="@id/user_last_name_layout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_email_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/TextEdit"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInput"
        app:layout_constraintTop_toBottomOf="@id/user_email_layout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_phone_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            style="@style/TextEdit"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>